# bigtree

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  binarytree.html  dag.html  genindex.html  index.html  mkdocs.yml  node.html  objects.inv  others.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sitemap.xml  tree.html  utils.html  workflows.html
.doctrees/: binarytree.doctree  dag.doctree  environment.pickle  index.doctree  node.doctree  others.doctree  tree.doctree  utils.doctree  workflows.doctree
.doctrees/bigtree/binarytree/: construct.doctree
.doctrees/bigtree/dag/: construct.doctree  export.doctree
.doctrees/bigtree/node/: basenode.doctree  binarynode.doctree  dagnode.doctree  node.doctree
.doctrees/bigtree/tree/: construct.doctree  export.doctree  (+3 more)
.doctrees/demo/: binarytree.doctree  dag.doctree  tree.doctree  workflow.doctree
.doctrees/others/: changelog.doctree  contributing.doctree  list_dir.doctree  merging_trees.doctree  nodes.doctree  tips.doctree  weighted_trees.doctree
.github/: FUNDING.yml  pull_request_template.md  release.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  bug_report.md  bug_report.yml  config.yml  custom.md  feature_request.yml  issue-template.md
.github/workflows/: codecov.yml  conda-publish.yml  docs.yml  pytest.yml  python-publish.yml
_sources/: binarytree.rst.txt  dag.rst.txt  index.rst.txt  node.rst.txt  workflows.rst.txt
_sources/demo/: dag.md.txt  tree.md.txt
_sources/others/: changelog.rst.txt  contributing.rst.txt  list_dir.md.txt  merging_trees.md.txt  nodes.md.txt  weighted_trees.md.txt
_static/: custom.css  documentation_options.js  playground-config.js  playground.js  playground.py  playground_whl.py
_static/playground/: index.html
_static/playground_whl/: index.html
assets/: tree.dot  tree_dag.dot
assets/demo/: tree.html  vis.html
benchmark/: index.html
benchmarks/: index.html
bigtree/: __init__.py  _globals.py  _plugins.py  globals.py  meta.yaml
bigtree/binarytree/: binarytree.py  construct.html  construct.py  index.html
bigtree/btree/: construct.py
bigtree/dag/: construct.html  construct.py  dag.py  export.html  export.py  index.html  parsing.py
bigtree/node/: basenode.html  basenode.py  binarynode.html  binarynode.py  bnode.py  dagnode.html  dagnode.py  index.html  node.html  node.py
bigtree/tree/: _query.py  construct.html  construct.py  export.html  export.py  helper.html  helper.py  index.html  modify.html  modify.py  parsing.py  query.py  search.html  search.py  tree.py
bigtree/utils/: assertions.py  common.py  constants.py  exceptions.py  groot.py  index.html  iterators.html  iterators.py  plot.html  plot.py
bigtree/workflows/: app_calendar.html  app_calendar.py  app_todo.html  app_todo.py  index.html
binarytree/: index.html
changelog/: index.html
conda/: conda-env.yml  meta.yaml  meta.yml
contributing/: index.html
dag/: index.html
demo/: binarytree.html  dag.html  index.html  tree.html  workflow.html
demo/binarytree/: index.html
demo/dag/: index.html
demo/tree/: index.html
demo/workflow/: index.html
dev/bench/: data.js  index.html
docs/: CNAME  benchmark.md  benchmarks.md  binarytree.md  changelog.md  contributing.md  dag.md  environment.yaml  home.md  index.md  install.md  requirements.txt  tree.md
docs/_static/: custom.css  custom.js  playground-config.js  playground.css  playground.js  playground.py  playground2.py  playground_whl.py
docs/demo/: binarytree.md  dag.md  index.md  tree.md  workflow.md
docs/home/: Benchmark Library.ipynb  benchmarks.md  binarytree.md  community.md  contributing.md  convention.md  dag.md  install.md  tree.md
docs/others/: custom_coordinates.md  index.md  list_dir.md  merging_trees.md  nodes.md  remove_checks.md  weighted_trees.md  work_with_classes.md
docs/overrides/: main.html
docs/playground/: index.md  playground.md
docs/resources/: articles.md  index.md
docs/source/: binarytree.rst  btree.rst  conf.py  dag.rst  index.rst  node.rst  others.rst  tree.rst  utils.rst  versions.py  workflows.rst
docs_sphinx/source/: conf.py  tree.rst
etc/: conda-env.yml
home/: index.html
home/Benchmark Library/: index.html
home/benchmarks/: index.html
home/binarytree/: index.html
home/changelog/: index.html
home/community/: index.html
home/contributing/: index.html
home/convention/: index.html
home/dag/: index.html
home/install/: index.html
home/tree/: index.html
install/: index.html
others/: changelog.html  contributing.html  index.html  list_dir.html  merging_trees.html  nodes.html  tips.html  weighted_trees.html
others/custom_coordinates/: index.html
others/list_dir/: index.html
others/merging_trees/: index.html
others/nodes/: index.html
others/remove_checks/: index.html
others/weighted_trees/: index.html
others/work_with_classes/: index.html
overrides/: main.html
playground/: index.html
resources/: index.html
resources/articles/: index.html
search/: search_index.json
tests/: conftest.py  constants.py  test_constants.py
tests/binarytree/: test_binary_tree.py  test_construct.py  test_export.py  test_helper.py  test_search.py
tests/btree/: test_construct.py  test_export.py  test_helper.py  test_search.py
tests/dag/: conftest.py  test_construct.py  test_dag.py  test_export.py  test_parsing.py
tests/node/: test_basenode.py  test_basenode_no_assertions.py  test_binarynode.py  test_binarynode_no_assertions.py  test_bnode.py  test_dagnode.py  test_dagnode_no_assertions.py  test_node.py  test_node_benchmark.py
tests/tree/: conftest.py  test_construct.py  test_export.py  test_helper.py  test_modify.py  test_parsing.py  test_query.py  test_search.py  test_tree.py
tests/utils/: test_common.py  test_groot.py  test_iterators.py  test_plot.py
tests/workflows/: test_todo.py
tree/: index.html
wheels/: bigtree-0.19.0-py3-none-any.whl
(+186 files in other folders)
