[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigtree"
description = "Tree Implementation and Methods for Python, integrated with Python list, dictionary, and pandas DataFrame."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = [
  "tree",
  "bigtree",
]
authors = [
  { name = "Kay Jan", email = "kayjanw@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://bigtree.readthedocs.io"
Issues = "https://github.com/kayjan/bigtree/issues"
Discussions = "https://github.com/kayjan/bigtree/discussions"
Source = "https://github.com/kayjan/bigtree"

[project.optional-dependencies]
all = [
  "pandas",
  "pydot",
  "Pillow",
]
image = [
  "pydot",
  "Pillow",
]
pandas = ["pandas"]

[tool.hatch.version]
path = "bigtree/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "coverage",
  "mypy",
  "pandas",
  "Pillow",
  "pydot",
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "no-cov && coverage report --show-missing --omit='*/workflows/*' {args}"
cov2 = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=bigtree {args}"
no-cov = "pytest . {args}"
lint = "black -l 88 ."
sort = "isort --profile black ."
mypy-type = "mypy bigtree"

[tool.hatch.envs.docs]
dependencies = [
  "autodocsumm",
  "karma-sphinx-theme",
  "myst-parser",
  "pandas",
  "sphinxemoji"
]

[tool.hatch.envs.docs.scripts]
html = "sphinx-build -M html docs/source docs/build"
coverage = "sphinx-build -v -b coverage docs/source docs/build/coverage"
clean = "sphinx-build -M clean docs/source docs/build"
clean-html = "sphinx-build -M html docs/source docs/build & sphinx-build -M clean docs/source docs/build"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "*/tests/*",
  "*/workflows/*",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.flake8]
ignore = """E501, W503"""
per-file-ignores = """
  docs/source/conf.py: E402
  bigtree/__init__.py: F401
"""

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict = true
strict_optional = false
warn_no_return = false
